# SPDX-FileCopyrightText: 2024 Nextcloud GmbH and Nextcloud contributors
# SPDX-License-Identifier: AGPL-3.0-or-later
[tool.poetry]
name = "llm2"
description = ""
authors = ["Marcel Klehr <mklehr@gmx.net>"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.*"
fastapi = "^0.128.0"
nc-py-api = {extras = ["app"], version = "^0.23.0"}
langchain = "^1.2.3"
niquests = "^3.16.1"
langchain-community = "^0.3.24"
llama-cpp-python = "^0.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
