# SPDX-FileCopyrightText: 2024 Nextcloud GmbH and Nextcloud contributors
# SPDX-License-Identifier: AGPL-3.0-or-later
[tool.poetry]
name = "llm2"
description = ""
authors = ["Marcel Klehr <mklehr@gmx.net>"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.*"
fastapi = "^0.135.3"
nc-py-api = {extras = ["app"], version = "^0.24.2"}
langchain = "^0.3.27"
niquests = "^3.18.4"
langchain-community = "^0.3.24"
llama-cpp-python = "^0.3.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
