# SPDX-FileCopyrightText: 2024 Nextcloud GmbH and Nextcloud contributors
# SPDX-License-Identifier: AGPL-3.0-or-later
[tool.poetry]
name = "llm2"
description = ""
authors = ["Marcel Klehr <mklehr@gmx.net>"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.*"
fastapi = ">=0.135.3,<0.139.0"
nc-py-api = {extras = ["app"], version = ">=0.24.2,<0.31.0"}
langchain = "^0.3.27"
niquests = "^3.18.5"
langchain-openai = "^0.3"
xllamacpp = {version = "*", source = "xllamacpp-cu128"}


[[tool.poetry.source]]
name = "xllamacpp-cu128"
url = "https://xorbitsai.github.io/xllamacpp/whl/cu128"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
